--- a/css/welcome.css
+++ b/css/welcome.css
@@ -17,3 +17,27 @@
 	border-radius: 50%;
 	border: 2px solid red;
 }
+
+#loading{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background-color: rgb(244, 207, 41);
+}
+#loading img{
+	width: 50%;
+	max-width: 400px;
+	height: auto;
+	  overflow: auto;  
+	  margin: auto;  
+	  position: absolute;  
+	  top: 0; left: 0; bottom: 0; right: 0;  
+}
+#loading p{
+	width: 100%;
+	text-align: center;
+	color: white;
+	position: absolute;
+	bottom: 1em;
+	font-size: 3em;
+}
