--- a/css/welcome.css
+++ b/css/welcome.css
@@ -33,20 +33,19 @@
 	border: 2px solid red;
 }
 
-<<<<<<< HEAD
 
 
 
-=======
 #loading{
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	background-color: rgb(244, 207, 41);
+	top: 0; left: 0; bottom: 0; right: 0;  
 }
 #loading img{
 	width: 50%;
-	max-width: 400px;
+	max-width: 300px;
 	height: auto;
 	  overflow: auto;  
 	  margin: auto;  
@@ -59,6 +58,5 @@
 	color: white;
 	position: absolute;
 	bottom: 1em;
-	font-size: 3em;
+	font-size: 2.5em;
 }
->>>>>>> origin/master
