--- a/css/welcome.css
+++ b/css/welcome.css
@@ -14,9 +14,6 @@
 }
 
 
-.page1{
-	background: url(../img/page1.png);
-}
 
 .open{
 	text-align: center;
@@ -33,11 +30,11 @@
 	border: 2px solid red;
 }
 
-<<<<<<< HEAD
+/*<<<<<<< HEAD
 
 
 
-=======
+=======*/
 #loading{
 	width: 100%;
 	height: 100%;
@@ -61,4 +58,54 @@
 	bottom: 1em;
 	font-size: 3em;
 }
->>>>>>> origin/master
+/*>>>>>>> origin/master
+*/
+
+/*openButto动画*/
+@-webkit-keyframes btnAnimation{
+	0%{
+		height: 55px;
+	}
+	100%{
+		height: 300px;
+		width: 300px
+	}
+}
+@-moz-keyframes btnAnimation{
+	0%{
+		height: 55px;
+	}
+	100%{
+		height: 300px;
+		width: 300px
+	}
+}
+@-ms-keyframes btnAnimation{
+	0%{
+		height: 55px;
+		
+	}
+	100%{
+		height: 300px;
+		width: 300px;
+	}
+}
+@-o-keyframes btnAnimation{
+	0%{
+		height: 55px;
+		
+	}
+	100%{
+		height: 300px;
+		width: 300px;
+	}
+}
+keyframes btnAnimation{
+	0%{
+		height: 55px;
+	}
+	100%{
+		height: 300px;
+		width: 300px;
+	}
+}
