--- a/css/welcome.css
+++ b/css/welcome.css
@@ -24,7 +24,6 @@
 	bottom: 7%;
 	width: 100%;
 }
-
 .open img{
 	height: 55px;
 	border-radius: 50%;
@@ -34,13 +33,70 @@
 }
 
 
+.intro-1-before{
+	border-radius: 10px;
+	    border: 1px solid #00b6ef;
+	    margin-left: 45%;
+	    margin-right: 10%;
+	    margin-top: 10%;	
+	    width: auto;
+	    height: auto; 
+	    padding: 0.5em;
+	    font-size: 0.1em;
+	    -webkit-transition: width 1.5s, height 1.5s, -webkit-transform 1.5s; /* For Safari 3.1 to 6.0 */
+	        transition: width 1.5s, height 1.5s, transform 1.5s;
+}
+.intro-1-after{
+	border-radius: 25px;
+	    border: 3px solid #00b6ef;
+	    margin-left: 35%;
+	    margin-right: 5%;
+	    margin-top: 2%;	
+	    width: auto;
+	    height: auto; 
+	    padding: 0.5em;
+	    font-size: 1em;
+	    color: #34fb6d;
+	    -webkit-transform: rotate(360deg); /* Chrome, Safari, Opera */
+	       transform: rotate(360deg);
+}
+
+.intro-2-before{
+	border-radius: 10px;
+	    border: 1px solid #00b6ef;
+	    margin-left: 45%;
+	    margin-right: 10%;
+	    margin-top: 10%;	
+	    width: auto;
+	    height: auto; 
+	    padding: 0.5em;
+	    font-size: 0.1em;
+	    -webkit-transition: width 1.5s, height 1.5s, -webkit-transform 1.5s; /* For Safari 3.1 to 6.0 */
+	        transition: width 1.5s, height 1.5s, transform 1.5s;
+}
+.intro-2-after{
+	border-radius: 25px;
+	    border: 3px solid #00b6ef;
+	    margin-left: 39%;
+	    margin-right: 5%;
+	    margin-top: 2%;	
+	    width: auto;
+	    height: auto; 
+	    padding: 0.5em;
+	    font-size: 1em;
+	    color: #34fb6d;
+	    -webkit-transform: rotateY(360deg); /* Chrome, Safari, Opera */
+	       transform: rotateY(360deg);
+}
+
+
 
 
 #loading{
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	background-color: rgb(244, 207, 41);
+	background-color: #ffda4a;
 	top: 0; left: 0; bottom: 0; right: 0;  
 }
 #loading img{
