--- a/css/welcome.css
+++ b/css/welcome.css
@@ -78,55 +78,27 @@
 	font-size: 2.5em;
 }
 
-
-
-/*openButto动画*/
-/*@-webkit-keyframes btnAnimation{
-	0%{
-		height: 55px;
-	}
-	100%{
-		height: 300px;
-		width: 300px
-	}
-}
-@-moz-keyframes btnAnimation{
-	0%{
-		height: 55px;
-	}
-	100%{
-		height: 300px;
-		width: 300px
-	}
-}
-@-ms-keyframes btnAnimation{
-	0%{
-		height: 55px;
-		
-	}
-	100%{
-		height: 300px;
-		width: 300px;
-	}
-}
-@-o-keyframes btnAnimation{
-	0%{
-		height: 55px;
-		
-	}
-	100%{
-		height: 300px;
-		width: 300px;
-	}
-}
-keyframes btnAnimation{
-	0%{
-		height: 55px;
-	}
-	100%{
-		height: 300px;
-		width: 300px;
-	}
+/*page1 ended, page2 begins*/
+.titleImg{
+	position: relative;
+	width: 50%;
+	left: 41%; 
+	top: 2%;
+	z-index: 10;
 }
 
-*/
+.decorationImg{
+	position: relative;
+	left: 40%;
+	width: 60%;
+	top: 1%;
+	opacity: 0.1;
+}
+
+
+.contentImg{
+	position: relative;
+	width: 53%;
+	left: 41%;
+}
+
