--- a/css/welcome.css
+++ b/css/welcome.css
@@ -104,7 +104,7 @@ body{
 .text{
 	position: relative;
 	left: 41%;
-	font-weight: lighter;
+	font-weight: normal;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	-o-font-smoothing: antialiased;
@@ -114,14 +114,15 @@ body{
 
 #softPink{
 	font-size: 1.1rem;
-	color: pink;
+	color: #ff8a8a;
 	left: 40%;
 	bottom: 1%;
+	font-weight: bold;
 }
 
 #intro1{
 	font-size: 1.0rem;
-	color: yellow;
+	color: #faf68f;
 	line-height: 2.0rem;
 	margin-top: 5%;
 	margin-bottom: 6%;
@@ -129,7 +130,7 @@ body{
 
 #intro2{
 	font-size: 1.0rem;
-	color: yellow;
+	color: #faf68f;
 	line-height: 2.0rem;
 }
 
@@ -148,29 +149,96 @@ body{
 
 #intro3{
 	font-size: 0.9rem;
-	color: yellow;
+	color: #faf68f;
 	margin-bottom: 1rem;
 }
 #intro4{
 	font-size: 0.9rem;
-	color: yellow;
+	color: #faf68f;
 	margin-bottom: 1rem;
 }
 #intro5{
 	font-size: 0.9rem;
-	color: yellow;
+	color: #faf68f;
 	margin-bottom: 1rem;
 }
 #intro6{
 	font-size: 0.7rem;
-	color: yellow;
+	color: #749882;
 	margin-bottom: 1rem;
 }
 #intro7{
 	font-size: 0.7rem;
-	color: yellow;
+	color: #749882;
+}
+
+/*page3 ended page4 begins*/
+#intro8{
+	font-size: 1.5rem;
+	color: #8EEAFE;
 	margin-bottom: 1rem;
+	font-weight: bold;
+}
+#intro9{
+	font-size: 0.9rem;
+	color: #698488;
+	margin-bottom: 1.5rem;
+}
+#intro10{
+	font-size: 0.9rem;
+	color: #faf68f;
+	margin-bottom: 1rem;
+}
+#intro11{
+	font-size: 0.9rem;
+	color: #faf68f;
+	margin-bottom: 1rem;
+}
+#intro12{
+	font-size: 0.9rem;
+	color: #faf68f;
+	margin-bottom: 1rem;
+}
+#intro13{
+	font-size: 0.9rem;
+	color: #faf68f;
+	margin-bottom: 1rem;
+}
+#intro14{
+	font-size: 0.9rem;
+	color: #FED77A;
+	margin-bottom: 1rem;
+}
+#intro15{
+	font-size: 0.9rem;
+	color: #faf68f;
+	margin-bottom: 1rem;
+}
+#intro16{
+	font-size: 1.1rem;
+	color: #8EEAFE;
+	margin-bottom: 1rem;
+	font-weight: bold;
 }
 
 
-
+@media all and (max-width: 321px){
+	/*page1 begins*/
+	#softPink{
+		bottom: 13%;
+	}
+	#intro1{
+		bottom: 12.6%;
+	}
+	#intro2{
+		bottom: 12.6%;
+	}
+	/*page1 ended page2 begins*/
+	#intro6{
+		display: none;
+	}
+	/*page2 ended page3 begins*/
+	#intro9{
+		display: none;
+	}
+}
