--- a/css/welcome.css
+++ b/css/welcome.css
@@ -59,8 +59,7 @@ body{
 
 
 #loading{
-	width: 100%;
-	height: 100%;
+	margin: auto;
 	position: absolute;
 	background-color: #ffda4a;
 	top: 0; left: 0; bottom: 0; right: 0;  
